adding auth information to endpoints that require a bearer token
